--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <h3 class="text-body mx-auto mt-2 mb-5">Hi, I'm Kayo <br>
                                 Bonjour, je suis Kayo<br>
                                 今日は、かよと申します　<br>
-                                　你好，我是殷綺妤</h2>
+                                　你好，我是殷綺妤</h3>
                                 <tt>[kajo iɴ] </tt><br>
                                 <tt>she/her </tt><br>
                                 
@@ -168,8 +168,8 @@
                   <button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs1')">
                 Abstract
               </button>
-                  <span class="badge badge-pdf" <a href="https://arxiv.org/pdf/2105.06977.pdf"> PDF </a></span>
-                <span class="badge badge-secondary" <a href="https://github.com/neulab/contextual-mt"> Code/Data </a></span>
+                  <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.06977.pdf"> PDF </a></span>
+                <span class="badge badge-secondary"> <a href="https://github.com/neulab/contextual-mt"> Code/Data </a></span>
                 <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib1')">
                 BibTeX
               </button>
@@ -201,7 +201,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs2')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf" <a href="https://arxiv.org/pdf/2105.05222.pdf"> PDF </a></span>
+                      <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.05222.pdf"> PDF </a></span>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib2')">
                     BibTeX
                   </button>
@@ -235,7 +235,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs3')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf" <a href="https://arxiv.org/pdf/2105.03482.pdf"> PDF </a></span>
+                      <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.03482.pdf"> PDF </a></span>
                       <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">Code/Data</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib3')">
                     BibTeX
@@ -268,7 +268,7 @@
                       <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs4')">
                         Abstract
                       </button>
-                          <span class="badge badge-pdf" <a href="https://arxiv.org/pdf/2105.07476.pdf"> PDF </a></span>
+                          <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.07476.pdf"> PDF </a></span>
                         <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib4')">
                         BibTeX
                       </button>
@@ -306,7 +306,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs5')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf" <a href="https://www.aclweb.org/anthology/2020.coling-main.525.pdf"> PDF </a></span>
+                      <span class="badge badge-pdf"><a href="https://www.aclweb.org/anthology/2020.coling-main.525.pdf"> PDF </a></span>
                       <a href="https://github.com/kayoyin/transformer-slt"> <span class="badge badge-secondary">Code/Data</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib5')">
                     BibTeX
@@ -344,7 +344,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs6')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf" <a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf"> PDF </a></span>
+                      <span class="badge badge-pdf"><a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf"> PDF </a></span>
                       <a href="https://github.com/kayoyin/transformer-slt"> <span class="badge badge-secondary">Code/Data</span></a>
                       <a href="https://youtu.be/c-87jFd2lQs"> <span class="badge badge-video">Video</span></a>
 
