--- a/index.html
+++ b/index.html
@@ -99,24 +99,26 @@
                                 <br><br>
                                  I come from <a href="https://youtu.be/azpuIIz3mCU">Akashi, Japan</a> and grew up speaking 4 languages in <a href="https://youtu.be/_r4sBv4m0aI">Paris, France</a>. For as long as I can remember, I've had a passion for <a href="assets/img/animath.png">mathematics</a>. I actually learned to do multiplications and divisions before I learned to read!
                                  <a href="media.html">Music</a> is also a life-long passion of mine, and also what introduced me to AI: my worlds collided when I used LSTMs to generate music for my second-year programming <a href="http://github.com/kayoyin/prodigy">project</a>. When I discovered natural language processing, everything - my love of languages, numbers and codes - seemed to have fallen into place :)
+                                 <br><br>
+                                 I will be applying to PhD programs in Fall 2021!
                                  <br><br><br>
+                                 <li>
+                                  <b>2021-07-05</b> Extremely thrilled to receive the <b>Best Theme Paper</b> award at <a href="https://2021.aclweb.org/">ACL 2021</a>!
+                                 </li>
                                     <li>
                                      <b>2021-05-06</b> Super excited to have 3 papers accepted to <a href="https://2021.aclweb.org/">ACL 2021</a>!
                                  </li>
                                  <li>
+                                  <b>2020-10-18</b> Gave an invited talk at Computer Vision Talks on <a href="https://youtu.be/E5nKeEvoAK0">Sign Language Translation with Transformers</a>
+                               </li>
+                                 <li>
                                     <b>2020-09-30</b> My first conference submission was accepted to <a href="https://coling2020.org/"> COLING'2020</a>!
                                  </li>
                                  <li>
-                                    <b>2020-09-21</b> My Bachelor's thesis won Global Winner in Computer Science at <a href="https://undergraduateawards.com/winners/global-winners-2020">The Global Undergraduate Awards 2020</a>!
-                                 </li>
-                                 <li>
-                                    <b>2020-08-15</b>  I have started my master's degree at <a href="https://www.lti.cs.cmu.edu/"> CMU LTI</a>!
+                                    <b>2020-09-21</b> Extremely honored to be awarded <b>Global Winner in Computer Science</b> at <a href="https://undergraduateawards.com/winners/global-winners-2020">The Global Undergraduate Awards 2020</a>!
                                  </li>
                                  <li>
                                     <b>2020-07-25</b>  My undergraduate paper has been accepted to the <a href="https://slrtp.com/">SLRTP workshop</a> at ECCV'20!
-                                 </li>
-                                 <li>
-                                    <b>2020-04-23</b>  I successfully defended my Bachelor's thesis!
                                  </li>
                                  </div>
                                 </div>
@@ -136,7 +138,7 @@
                 My long-term research goal is to break down communication barriers between people, and between computers and people using Natural Language Processing. I believe that by improving how computers understand and respond to different natural languages, more people can benefit from technology.
                 <br> <br>
                 Currently, I am motivated by challenges in multilingual NLP such as: <br> <br>
-                 <li><b>Context-aware Machine Translation</b>: When do we need context for translation? How much are context-aware models actually using context? (<a href="https://arxiv.org/abs/2105.03482">ACL'21</a>) Are models using the context we expect them to? (<a href="https://arxiv.org/abs/2105.06977">ACL'21</a>) How can we encourage models use the right context when they need to?</li> <br>
+                 <li><b>Context-aware Machine Translation</b>: When do we need context for translation? How much are context-aware models actually using context? (<a href="https://arxiv.org/abs/2105.03482">ACL'21</a>) Are models using the context we expect them to? (<a href="https://arxiv.org/abs/2105.06977">ACL'21</a>) How can we encourage models to use the right context when they need to?</li> <br>
                  <li><b>Sign Language Processing</b>: Why do we need to study signed languages in NLP and what challenges should we consider? (<a href="https://arxiv.org/abs/2105.05222">ACL'21</a>) How can we translate signed languages into spoken languages? (<a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf">ECCV'20</a>, <a href="https://www.aclweb.org/anthology/2020.coling-main.525/">COLING'20</a>)
                      How can we perform data augmentation for extremely low-resourced signed languages?  (<a href="https://arxiv.org/abs/2105.07476">arXiv'21</a>) How can we extend current NLP models to signed languages?</li>
                 <br><br>
@@ -168,8 +170,8 @@
                   <button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs1')">
                 Abstract
               </button>
-                  <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.06977.pdf"> PDF </a></span>
-                <span class="badge badge-secondary"> <a href="https://github.com/neulab/contextual-mt"> Code/Data </a></span>
+              <a href="https://arxiv.org/pdf/2105.06977.pdf"><span class="badge badge-pdf"> PDF</span> </a>
+                  <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">  Code/Data </span></a>
                 <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib1')">
                 BibTeX
               </button>
@@ -201,7 +203,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs2')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.05222.pdf"> PDF </a></span>
+                  <a href="https://arxiv.org/pdf/2105.05222.pdf"><span class="badge badge-pdf"> PDF </span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib2')">
                     BibTeX
                   </button>
@@ -235,7 +237,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs3')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.03482.pdf"> PDF </a></span>
+                  <a href="https://arxiv.org/pdf/2105.03482.pdf"><span class="badge badge-pdf"> PDF</span> </a>
                       <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">Code/Data</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib3')">
                     BibTeX
@@ -268,7 +270,7 @@
                       <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs4')">
                         Abstract
                       </button>
-                          <span class="badge badge-pdf"><a href="https://arxiv.org/pdf/2105.07476.pdf"> PDF </a></span>
+                      <a href="https://arxiv.org/pdf/2105.07476.pdf"><span class="badge badge-pdf"> PDF </span></a>
                         <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib4')">
                         BibTeX
                       </button>
@@ -306,7 +308,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs5')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf"><a href="https://www.aclweb.org/anthology/2020.coling-main.525.pdf"> PDF </a></span>
+                  <a href="https://www.aclweb.org/anthology/2020.coling-main.525.pdf"><span class="badge badge-pdf"> PDF </span></a>
                       <a href="https://github.com/kayoyin/transformer-slt"> <span class="badge badge-secondary">Code/Data</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib5')">
                     BibTeX
@@ -344,7 +346,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs6')">
                     Abstract
                   </button>
-                      <span class="badge badge-pdf"><a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf"> PDF </a></span>
+                  <a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf"><span class="badge badge-pdf"> PDF </span></a>
                       <a href="https://github.com/kayoyin/transformer-slt"> <span class="badge badge-secondary">Code/Data</span></a>
                       <a href="https://youtu.be/c-87jFd2lQs"> <span class="badge badge-video">Video</span></a>
 
@@ -444,7 +446,7 @@
         </div>
             </section>
             <br><br><br>
-            <i> <p style="color:#808080">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last updated May 21 2021</p> </i>
+            <i> <p style="color:#808080">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last updated July 5 2021</p> </i>
 
         
         <!-- Bootstrap core JS-->
