--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                                     <b>2020-09-21</b> Extremely honored to be awarded <b>Global Winner in Computer Science</b> at <a href="https://undergraduateawards.com/winners/global-winners-2020">The Global Undergraduate Awards 2020</a>!
                                  </li>
                                  <li>
+                                  <b>2020-08-31</b>  Started my Master's degree at CMU LTI!
+                               </li>
+                                 <li>
                                     <b>2020-07-25</b>  My undergraduate paper has been accepted to the <a href="https://slrtp.com/">SLRTP workshop</a> at ECCV'20!
                                  </li>
                                  </div>
@@ -135,12 +138,12 @@
 
                 <h6 class="display-6">Research</h6>
                 <hr>
-                My long-term research goal is to break down communication barriers between people, and between computers and people using Natural Language Processing. I believe that by improving how computers understand and respond to different natural languages, more people can benefit from technology.
+                My long-term research goal is to break down communication barriers between people, and between computers and people using Natural Language Processing. I believe that by improving how computers understand and respond to different natural languages, more people can benefit from technology using their preferred language.
                 <br> <br>
-                Currently, I am motivated by challenges in multilingual NLP such as: <br> <br>
-                 <li><b>Context-aware Machine Translation</b>: When do we need context for translation? How much are context-aware models actually using context? (<a href="https://arxiv.org/abs/2105.03482">ACL'21</a>) Are models using the context we expect them to? (<a href="https://arxiv.org/abs/2105.06977">ACL'21</a>) How can we encourage models to use the right context when they need to?</li> <br>
-                 <li><b>Sign Language Processing</b>: Why do we need to study signed languages in NLP and what challenges should we consider? (<a href="https://arxiv.org/abs/2105.05222">ACL'21</a>) How can we translate signed languages into spoken languages? (<a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf">ECCV'20</a>, <a href="https://www.aclweb.org/anthology/2020.coling-main.525/">COLING'20</a>)
-                     How can we perform data augmentation for extremely low-resourced signed languages?  (<a href="https://arxiv.org/abs/2105.07476">arXiv'21</a>) How can we extend current NLP models to signed languages?</li>
+                Currently, I am working on challenges in multilingual NLP such as: <br> <br>
+                 <li><b>Context-aware Machine Translation</b>: When do we need context for translation? How much are context-aware models actually using context? (<a href="https://arxiv.org/abs/2105.03482">ACL'21</a>) Are models using the context we expect them to? (<a href="https://arxiv.org/abs/2105.06977">ACL'21</a>) How can we encourage models to use the right context?</li> <br>
+                 <li><b>Sign Language Processing</b>: Why should we study signed languages in NLP and what challenges do we need to consider? (<a href="https://arxiv.org/abs/2105.05222">ACL'21</a>) How can we translate signed languages into spoken languages? (<a href="https://slrtp.com/papers/extended_abstracts/SLRTP.EA.12.009.paper.pdf">ECCV'20</a>, <a href="https://www.aclweb.org/anthology/2020.coling-main.525/">COLING'20</a>)
+                     How can we perform data augmentation for extremely low-resourced signed languages?  (<a href="https://arxiv.org/abs/2105.07476">arXiv'21</a>) </li>
                 <br><br>
 
                 Please do not hesitate to reach out if you'd like to chat or collaborate! I am generally responsive to emails and Twitter messages, I am not as responsive as I'd like to be on LinkedIn.
@@ -170,7 +173,7 @@
                   <button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs1')">
                 Abstract
               </button>
-              <a href="https://arxiv.org/pdf/2105.06977.pdf"><span class="badge badge-pdf"> PDF</span> </a>
+              <a href="https://arxiv.org/pdf/2105.06977.pdf"><span class="badge badge-pdf"> PDF</span></a>
                   <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">  Code/Data </span></a>
                 <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib1')">
                 BibTeX
@@ -194,7 +197,7 @@
               </div><br><br>
 
                  <li> 
-                <a href="https://arxiv.org/abs/2105.05222"> Including Signed Languages in Natural Language Processing</a>
+                  <span class="badge badge-sp"> <b>Best Theme Paper</b> </span> <a href="https://arxiv.org/abs/2105.05222">Including Signed Languages in Natural Language Processing</a> 
                 <br>
                 <u>Kayo Yin</u>, Amit Moryossef, Julie Hochgesang, Yoav Goldberg and Malihe Alikhani.
                   <br>
@@ -237,7 +240,7 @@
                   <br><button type="button" class="badge badge-abs" href="javascript:void(0)" onclick="show('abs3')">
                     Abstract
                   </button>
-                  <a href="https://arxiv.org/pdf/2105.03482.pdf"><span class="badge badge-pdf"> PDF</span> </a>
+                  <a href="https://arxiv.org/pdf/2105.03482.pdf"><span class="badge badge-pdf"> PDF</span></a>
                       <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">Code/Data</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib3')">
                     BibTeX
