--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pubs">Publications</a></li>
                         <li class="nav-item"><a class="nav-link" href="#talks">Talks</a></li>
-                        <li class="nav-item"><a class="nav-link" href="media.html">Misc.</a></li>
+                        <li class="nav-item"><a class="nav-link" href="media.html">Personal</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://medium.com/@kayo.yin">Blog</a></li>
                     </ul>
                 </div>
