--- a/media.html
+++ b/media.html
@@ -30,12 +30,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#research">Research</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#pubs">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#media">Talks</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#perf">Performances</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://medium.com/@kayo.yin">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#vlogs">Vlogs</a></li>
                     </ul>
                 </div>
             </div>
@@ -120,12 +117,13 @@
         </div></div>
             </section>
 
-            <section id="perf" class="mt-5">
+            <section id="vlogs" class="mt-5">
                 <div class="container ">
                 <h3 class="display-5">Vlogs</h3>
                 <hr>
-            I started vlogging (very irregularly) while solo traveling (another huge hobby of mine), mostly for myself and to show friends and family. Maybe I'll add them here too, maybe not.
-            
+            I started vlogging (very irregularly) while solo traveling (another huge hobby of mine), mostly for myself and to show friends and family. Here is a playlist!
+            <br><br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLQRDjZrFKXcpL2j5jekIgpju9FPFo08tm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br><br><br><br><br>
         </div>
         </section>
