--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                                      <b>2021-05-06</b> Super excited to have 3 papers accepted to <a href="https://2021.aclweb.org/">ACL 2021</a>!
                                  </li>
                                  <li>
+                                  <b>2021-03-01</b> Gave an invited talk at Unbabel on "Do Context-Aware Translation Models Pay the Right Attention?"
+                              </li>
+                                 <li>
                                   <b>2020-10-18</b> Gave an invited talk at Computer Vision Talks on <a href="https://youtu.be/E5nKeEvoAK0">Sign Language Translation with Transformers</a>
                                </li>
                                  <li>
@@ -212,6 +215,7 @@
               </button>
               <a href="https://aclanthology.org/2021.acl-long.65.pdf"><span class="badge badge-pdf"> PDF</span></a>
                   <a href="https://github.com/neulab/contextual-mt"><span class="badge badge-secondary">  Code/Data </span></a>
+                  <a href="https://youtu.be/IRiy_xpWC-0"> <span class="badge badge-video">Video</span></a>
                 <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib1')">
                 BibTeX
               </button>
@@ -253,6 +257,7 @@
                     Abstract
                   </button>
                   <a href="https://aclanthology.org/2021.acl-long.570.pdf"><span class="badge badge-pdf"> PDF </span></a>
+                  <a href="https://youtu.be/AYEIcOsUyWs"> <span class="badge badge-video">Video</span></a>
                     <button type="button" class="badge badge-bibtex" href="javascript:void(0)" onclick="show('bib2')">
                     BibTeX
                   </button>
