--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
         <script language="javascript">
             function show( elem ) {
                 var x = document.getElementById(elem);
-                if (x.style.display === "none") {
-                    x.style.display = "block";
-                } else {
-                    x.style.display = "none";
-                }
+                if (x.style.display === "block") {x.style.display = "none";}
+                else {x.style.display = "block";}
             }
         </script>
     </head>
